force-app/main/default/objects/ssot__AiAgentInteractionMessage__dlm/ssot__AiAgentInteractionMessage__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isSqlDmo>false</isSqlDmo>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>AI Agent Interaction Message</labelOverride>
        <masterLabel>AI Agent Interaction Message</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
        <referenceEntityGroup>AI Agent Session</referenceEntityGroup>
        <referenceEntityName>AiAgentInteractionMessage</referenceEntityName>
        <referenceEntitySubjectArea>Ai Agent Session</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>