force-app/main/default/objects/ssot__AiAgentInteractionMessage__dlm/fields/AttributeText__c.field-meta.xml
<CustomField>
    <fullName>AttributeText__c</fullName>
    <label>Message Attributes</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Message Attributes</labelOverride>
        <masterLabel>Message Attributes</masterLabel>
        <refAttrDeveloperName>AttributeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>