force-app/main/default/objects/ssot__AiAgentInteractionMessage__dlm/fields/KQ_AiAgentSessionParticipantId__c.field-meta.xml
<CustomField>
    <fullName>KQ_AiAgentSessionParticipantId__c</fullName>
    <label>Key Qualifier AI Agent Session Participa</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier AI Agent Session Participant</labelOverride>
        <masterLabel>Key Qualifier AI Agent Session Participa</masterLabel>
        <refAttrDeveloperName>KQ_AiAgentSessionParticipantId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>