force-app/main/default/objects/ssot__AiAgentInteractionMessage__dlm/fields/KQ_ParentMessageId__c.field-meta.xml
<CustomField>
    <fullName>KQ_ParentMessageId__c</fullName>
    <label>Key Qualifier Parent Message</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Parent Message</labelOverride>
        <masterLabel>Key Qualifier Parent Message</masterLabel>
        <refAttrDeveloperName>KQ_ParentMessageId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>