force-app/main/default/objects/ssot__AiAgentInteractionMessage__dlm/fields/MessageEndTimestamp__c.field-meta.xml
<CustomField>
    <fullName>MessageEndTimestamp__c</fullName>
    <label>Message End Timestamp</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Message End Timestamp</labelOverride>
        <masterLabel>Message End Timestamp</masterLabel>
        <refAttrDeveloperName>MessageEndTimestamp</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>