force-app/main/default/objects/ssot__AiAgentInteractionMessage__dlm/fields/MessageStartTimestamp__c.field-meta.xml
<CustomField>
    <fullName>MessageStartTimestamp__c</fullName>
    <label>Message Start Timestamp</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Message Start Timestamp</labelOverride>
        <masterLabel>Message Start Timestamp</masterLabel>
        <refAttrDeveloperName>MessageStartTimestamp</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>