force-app/main/default/objects/ssot__AiAgentInteractionMessage__dlm/fields/Modality__c.field-meta.xml
<CustomField>
    <fullName>Modality__c</fullName>
    <label>Modality</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Modality</labelOverride>
        <masterLabel>Modality</masterLabel>
        <refAttrDeveloperName>Modality</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>